<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/ic_menu_class"
            android:title="@string/menu_my_listing"/>
        <item
            android:id="@+id/nav_bids"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_bids"/>
        <item
            android:id="@+id/nav_add"
            android:checkable="true"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/menu_add"/>
        <item
            android:id="@+id/nav_browser"
            android:checkable="true"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_browse_listings" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
            <item
                android:id="@+id/nav_profil"
                android:checkable="true"
                android:icon="@drawable/ic_account_circle"
                android:title="@string/menu_profil"/>
            <item
                android:id="@+id/nav_settings"
                android:checkable="true"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings"/>
            <item
                android:id="@+id/nav_about"
                android:checkable="true"
                android:icon="@drawable/ic_help"
                android:title="@string/menu_about"/>
            <item
                android:id="@+id/nav_logout"
                android:checkable="true"
                android:icon="@drawable/ic_log_out"
                android:onClick="logout"
                android:title="@string/menu_logout"/>
    </group>


<!--    <item android:title="@string/about_you_and_the_app"-->
<!--        app:itemTextColor="@color/colorText">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_profil"-->
<!--                android:icon="@drawable/ic_account_circle"-->
<!--                android:title="@string/menu_profil" />-->
<!--            <item-->
<!--                android:id="@+id/nav_settings"-->
<!--                android:icon="@drawable/ic_settings"-->
<!--                android:title="@string/menu_settings" />-->
<!--            <item-->
<!--                android:id="@+id/nav_about"-->
<!--                android:icon="@drawable/ic_help"-->
<!--                android:title="@string/menu_about" />-->
<!--            <item-->
<!--                android:id="@+id/nav_logout"-->
<!--                android:icon="@drawable/ic_log_out"-->
<!--                android:title="@string/menu_logout"-->
<!--                android:onClick="logout"/>-->
<!--        </menu>-->
<!--    </item>-->
</menu>