<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:elevation="60dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_foreground" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />


    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/physical_address"
        android:inputType="textPostalAddress"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/buttons"
        android:enabled="false"
        android:onClick="registerButton"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/buttons"
        android:onClick="cancelButton"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:onClick="terms_cond"
        android:text="@string/check_to_agree_to_the_terms_and_privacy_policy"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="70dp"
        android:text="@string/sign_up_for_auction_house_app"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword2"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_boxes"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hints"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword2E"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawablePadding="-55dp"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hints" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_boxes"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hints"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawablePadding="-55dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hints" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>