<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragments"
    android:tag="Add"
    tools:context=".ui.add.AddFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="145dp"
        android:layout_marginTop="72dp"
        android:background="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/buttons"
        android:text="@string/take_picture"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="118dp"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/date_until_the_item_is_up"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/time_until_the_item_is_up"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/starting_price"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="358dp"
        android:layout_height="171dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/new_item"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/buttons"
        android:text="@string/done"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_below="@+id/button_take_picture"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons"
        android:gravity="center"
        android:text="@string/choose_currency"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/button_take_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>