<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_below="@+id/app_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="58dp"
        android:autofillHints="Email Address"
        android:background="@drawable/text_boxes"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPassword"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_below="@+id/editTextTextEmailAddress"
        android:layout_gravity="center"
        android:layout_marginStart="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/text_boxes"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hints"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPasswordE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawablePadding="-55dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hints" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="192dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/buttons"
        android:onClick="registerButton"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="192dp"
        android:layout_height="40dp"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/buttons"
        android:onClick="signinButton"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword"
        app:layout_constraintVertical_bias="0.372" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_toStartOf="@+id/textView2"
        android:text="@string/remember_me"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="58dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="138dp"
        android:elevation="60dp"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/icon_foreground" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/real_auction_house"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>